story 6: output header

--- a/template/outPut.html
+++ b/template/outPut.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="main">
+        <header>
+            <span>список абитуриентов</span> 
+            <div>
+                <span>поиск:</span>
+                <input type="search" name="q">
+                <input type="submit" id="submitB" value="[найти]"></input>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
