--- a/template/outPut.html
+++ b/template/outPut.html
@@ -16,6 +16,24 @@
                 <input type="submit" id="submitB" value="[найти]"></input>
             </div>
         </header>
+        <div class="line">
+            <table border="1px" width="100%">
+                <tr>
+                    <td>Имя</td>
+                    <td>Фамилия</td>
+                    <td>Номер группы</td>
+                    <td>Баллов</td>
+                </tr>
+            </table>
+            <table border="1px" width="100% ">
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
