--- a/template/outPut.html
+++ b/template/outPut.html
@@ -16,8 +16,8 @@
                 <input type="submit" id="submitB" value="[найти]"></input>
             </div>
         </header>
-        <div class="line">
-            <table border="1px" width="100%">
+        <div class="tableOut">
+            <table width="100%">
                 <tr>
                     <td>Имя</td>
                     <td>Фамилия</td>
@@ -25,7 +25,7 @@
                     <td>Баллов</td>
                 </tr>
             </table>
-            <table border="1px" width="100% ">
+            <table width="100% " class="line">
                 <tr>
                     <td></td>
                     <td></td>
@@ -34,6 +34,9 @@
                 </tr>
             </table>
         </div>
+        <span>
+            Страницы:
+        </span>
     </div>
 </body>
 </html>
