--- a/view/outPut.phtml
+++ b/view/outPut.phtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="\view\style.css">
     <title>Document</title>
 </head>
 <body>
@@ -38,5 +38,6 @@
             Страницы:
         </span>
     </div>
+    <?= var_dump($rows); ?>
 </body>
 </html>
